# Tetrad

./: .gitignore  CHANGELOG.md  CLAUDE.md  CORRECOES_CLI.md  Cargo.toml  DEBUGGING_REPORT.md  DEBUG_REPORT.md  INVESTIGACAO_CLI.md  LICENSE  README.md  RELATORIO_DEBUG.md  RELEASE_GUIDE.md  Tetrad.md  linkedin_post.txt  linkedin_post_pt.txt  server.json
.github/workflows/: ci.yml  release.yml
npm/: README.md  package.json
npm/scripts/: install.js
src/: lib.rs  main.rs
src/cache/: lru.rs  mod.rs
src/cli/: commands.rs  interactive.rs  mod.rs
src/consensus/: aggregator.rs  engine.rs  mod.rs  rules.rs
src/executors/: base.rs  codex.rs  gemini.rs  mod.rs  qwen.rs
src/hooks/: builtin.rs  mod.rs
src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs  transport.rs
src/reasoning/: bank.rs  export.rs  mod.rs  patterns.rs
src/types/: config.rs  errors.rs  mod.rs  requests.rs  responses.rs
tests/: cli_integration.rs  consensus_integration.rs  mcp_integration.rs  reasoning_integration.rs
